# SimplePicEditor

./: .gitignore  CMakeLists.txt  README.md
include/: mainwindow.h
src/: main.cpp
